--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Chatbot BRIVA</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chatbot BRIVA X PPLG 2</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
