--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@
 html, body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #6b73ff, #7f53ac);
+  background: ffff
 }
 
 /* ================= BODY ================= */
