--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <div class="chat-box" id="chatBox">
       <div class="bubble bot">
         Halo 👋<br>
-        Silakan ketik nama kamu untuk melihat nomor virtual (BRIVA).
+        Silakan ketik nama siswa untuk melihat nomor virtual (BRIVA) pembayarannya.
       </div>
     </div>
 
