--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-
+<div class="chat-wrapper">
   <div class="chat-container">
 
     <div class="chat-header">
@@ -16,6 +16,7 @@
         <p>Asisten Informasi Virtual</p>
       </div>
     </div>
+  </div>
 
     <div class="chat-box" id="chatBox">
       <div class="bubble bot">
